# Quality-Work-Standalone

./: .gitignore  LICENSE  Makefile  README.md
backend/: Makefile  QW.icns  QW3.icns  fixture.json  pyproject-windows.toml  pyproject.toml  qtserver.py  quality-work-windows.file  quality-work.py  quality-work.spec
backend/activities/: admin.py  decolators.py  models.py  serializer.py  urls.py  views.py
backend/activities/migrations/: 0001_initial.py  0002_fileupdatehistory_user_id_and_more.py  0003_remove_fileupdatehistory_user_id_and_more.py  0004_alter_fileupdatehistory_contents.py  0005_audioactivity.py  0006_alter_audioactivity_another_app_and_more.py  0007_remove_audioactivity_selected_and_more.py  0008_audioactivity_selected.py  0009_remove_audioactivity_show_front_and_more.py  0010_systemsettings.py  0011_alter_systemsettings_audio_activity_policy.py  0012_activitypredictor.py  0013_activitypredictor_data_end_and_more.py  0014_category_index_perspective_index.py  (+1 more)
backend/awatch/: AudioInfo.py  ConfigManager.py  EventProducer.py  HttpSession.py  RemoteSettings.py  WindowInfo.py  audio_info_for_mac.py  audio_info_for_windows.py  audio_watcher_start.py  aw_start.py  window_info_for_mac.py  window_info_for_windows.py
backend/backend/: settings.py  urls.py
backend/bootstrap/: GetServerPort.py  Migrator.py  MsixMigrator.py  SplashScreen.py  bootstrap.py
backend/media/: audio_settings-windows.json  audio_settings.json
backend/system/: DataExporter.py  models.py  urls.py  utils.py  views.py
backend/templates/: create.html  login.html  login_conf.html
(+128 files in other folders)
