[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend using Django"
authors = ["Kazuhiro Kuyama <kuyama@systemdesignk2.jp>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
django = "^5.1.2"
djangorestframework = "^3.15.2"
janome = "^0.5.0"
python-dateutil = "^2.9.0.post0"
django-environ = "^0.11.2"
mod-wsgi = "^5.0.1"
pynput = "^1.7.7"
requests = "^2.32.3"
pyaudio = "^0.2.14"
numpy = "^2.3.0"
scikit-learn = "^1.7.2"
configobj = "^5.0.9"
pyobjc-framework-coreaudio = "^12.1"
pyinstaller = "^6.17.0"
pystray = "^0.19.5"
pip-licenses = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
